--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">firebase</string>
+    <string name="CrearCuenta">Crear cuenta</string>
+    <string name="IniciarSesion">Iniciar Sesión</string>
+    <string name="firebaseTitle">¡Bienvenido! \n Conexión a Firebase</string>
 </resources>
