Se agrega la funcionalidad del scroll View y obtencion de pokemons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="CrearCuenta">Crear cuenta</string>
     <string name="IniciarSesion">Iniciar Sesión</string>
     <string name="firebaseTitle">¡Bienvenido! \n Conexión a Firebase</string>
+    <string name="avatar">Imagen de perfil</string>
 </resources>
